syntax = "proto3";
//package greeter;

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string msg = 1;
}

service Greeter {
    rpc Hello(HelloRequest) returns(HelloResponse){}
    rpc HelloAgain(HelloRequest) returns(HelloResponse){}
}